--- a/src/views/admin/dashboard.ejs
+++ b/src/views/admin/dashboard.ejs
@@ -28,4 +28,4 @@
     ` + inboxTable;
   var title = 'Admin Dashboard';
 %>
-<%- include('../layout') %>
+<%- include('../layout', { body, title }) %>
