--- a/src/views/inbox.ejs
+++ b/src/views/inbox.ejs
@@ -34,4 +34,4 @@
     ` + emailTable;
   var title = 'Inbox - ' + inbox.address;
 %>
-<%- include('layout') %>
+<%- include('layout', { body, title }) %>
