--- a/src/views/inbox.ejs
+++ b/src/views/inbox.ejs
@@ -23,6 +23,7 @@
   var body = `
     <div class="nav">
       <a href="/inbox">Inbox</a>
+      <a href="/inbox/api-docs">API</a>
       <a href="/inbox/settings">Settings</a>
       <form method="POST" action="/logout" style="display: inline;">
         <button type="submit" class="btn-secondary">Logout</button>
